[package]
edition = "2021"
license = "MIT"
name = "changestream-to-redis"
version = "0.3.0"

[dependencies]
base64 = { version = "0.21.2", default-features = false }
bson = { version = "2.6.1", default-features = false }
futures-util = { version = "0.3.28", default-features = false }
mongodb = { version = "2.6.0", default-features = false, features = ["tokio-runtime"] }
redis = { version = "0.23.0", default-features = false, features = ["script", "tokio-comp"] }
serde = { version = "1.0.174", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.103", default-features = false }
tokio = { version = "1.29.1", default-features = false }

[profile.release]
codegen-units = 1
lto = true
