[package]
edition = "2021"
license = "MIT"
name = "changestream-to-redis"
version = "0.9.2"

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
bson = { version = "2.11.0", default-features = false }
futures-util = { version = "0.3.28", default-features = false }
hyper = { version = "1.3.1", default-features = false, features = ["http1", "server"] }
hyper-util = { version = "0.1.5", default-features = false, features = ["tokio"] }
mongodb = { version = "2.8.2", default-features = false, features = ["tokio-runtime"] }
prometheus = { version = "0.13.4", default-features = false }
redis = { version = "0.27.5", default-features = false, features = ["script", "tokio-comp", "connection-manager"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.117", default-features = false }
tokio = { version = "1.38.0", default-features = false }

[profile.release]
codegen-units = 1
lto = true
